Initial arm fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include(link/AbletonLinkConfig.cmake)
 add_subdirectory(gflags)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -O2 -mcpu=cortex-a53 -mfpu=neon-fp-armv8 -mfloat-abi=hard")
 
 set(mongoose_HEADERS
   mongoose.h
@@ -21,4 +22,3 @@ add_executable(Carabiner
 )
 
 target_link_libraries(Carabiner Ableton::Link gflags)
-
